--- a/style.css
+++ b/style.css
@@ -119,3 +119,4 @@ ol > li > ul > li {
 ol > li {
   margin-bottom: 20px; /* Space between task and instructions for clarity */
 }
+<img id="logo" src="logo.png" alt="App Logo">
