--- a/style.css
+++ b/style.css
@@ -119,4 +119,4 @@ ol > li > ul > li {
 ol > li {
   margin-bottom: 20px; /* Space between task and instructions for clarity */
 }
-<img id="logo" src="logo.jpg" alt="App Logo">
+<img id="logo" src="Logo.jpg" alt="App Logo">
